Fixed overflow issue

--- a/src/components/Quests/Quest/Quest.scss
+++ b/src/components/Quests/Quest/Quest.scss
@@ -5,7 +5,6 @@
     box-shadow: 0px 0px 4px 1px #9747ff26;
     border-radius: 0.5rem;
     column-gap: 1rem;
-    max-width: 51rem;
   
     &__image {
       width: 45px;
