--- a/src/components/Quests/QuestsContainer/QuestsContainer.scss
+++ b/src/components/Quests/QuestsContainer/QuestsContainer.scss
@@ -1,21 +1,38 @@
-.quests-container {
+.quests-wrapper {
   max-width: 54rem;
+  width: 100%;
+  max-height: 30rem;
+  height: 100%;
   padding: 1rem;
+  border: 1px solid #dae5e4;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin: -1rem;
+}
+.quests__heading {
+  display: flex;
+  gap: 0.75rem;
+  align-items: center;
+  padding-bottom: 1rem;
+
+  h2 {
+    margin: 0;
+    font-size: 1.375rem;
+  }
+}
+.quests-container {
+  overflow-y: auto;
+  height: 100%;
+  margin: -1rem;
+  padding: 1rem;
+  margin-bottom: 0;
 
   &__list {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
     padding: 0;
-  }
-  &__heading {
-    display: flex;
-    gap: 0.75rem;
-    align-items: center;
-
-    h2 {
-      margin: 0;
-      font-size: 1.375rem;
-    }
+    margin-top: 0;
   }
 }
